fixed snackbar position on mobile

--- a/Source/Extensions/Blazorise.Snackbar/wwwroot/blazorise.snackbar.css
+++ b/Source/Extensions/Blazorise.Snackbar/wwwroot/blazorise.snackbar.css
@@ -367,11 +367,6 @@
   flex-direction: row;
   margin-bottom: 0;
 }
-.snackbar-stack-top-end .snackbar.snackbar-show,
-.snackbar-stack-top-start .snackbar.snackbar-show,
-.snackbar-stack-top .snackbar.snackbar-show {
-  transform: translate(-50%);
-}
 .snackbar-stack-top-end .snackbar:not(:last-child),
 .snackbar-stack-top-start .snackbar:not(:last-child),
 .snackbar-stack-top .snackbar:not(:last-child) {
@@ -390,7 +385,7 @@
 .snackbar-stack-top-start .snackbar-hide,
 .snackbar-stack-top-end .snackbar-hide {
   transition: all var(--stack-transition-duration, 1000);
-  animation: hideTop var(--stack-animation-duration, 500) forwards;
+  animation: hideTop var(--stack-animation-duration, 500) backwards;
   opacity: 0;
 }
 
@@ -406,63 +401,39 @@
 .snackbar-stack-bottom-start .snackbar-hide,
 .snackbar-stack-bottom-end .snackbar-hide {
   transition: all var(--stack-transition-duration, 1000);
-  animation: hideBottom var(--stack-animation-duration, 500) forwards;
+  animation: hideBottom var(--stack-animation-duration, 500) backwards;
   opacity: 0;
 }
 
 @keyframes showTop {
   0% {
-    max-height: 0;
-    padding: 0;
-    transform: translate(-50%) translateY(-50px);
     opacity: 0;
   }
   100% {
-    max-height: 150px;
-    padding: 0.5rem 1rem;
-    transform: translate(-50%) translateY(0);
     opacity: 1;
   }
 }
 @keyframes hideTop {
   0% {
-    max-height: 150px;
-    padding: 0.5rem 1rem;
-    transform: translate(-50%) translateY(0);
     opacity: 1;
   }
   100% {
-    max-height: 0;
-    padding: 0;
-    transform: translate(-50%) translateY(-50px);
     opacity: 0;
   }
 }
 @keyframes showBottom {
   0% {
-    max-height: 0;
-    padding: 0;
     opacity: 0;
-    transform: translate(-50%) translateY(50px);
   }
   100% {
-    max-height: 150px;
-    padding: 0.5rem 1rem;
     opacity: 1;
-    transform: translate(-50%) translateY(0);
   }
 }
 @keyframes hideBottom {
   0% {
-    max-height: 150px;
-    transform: translate(-50%) translateY(0);
-    padding: 0.5rem 1rem;
     opacity: 1;
   }
   100% {
-    max-height: 0;
-    padding: 0;
-    transform: translate(-50%) translateY(50px);
     opacity: 0;
   }
 }
